--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		</head>
 		<body id = "gradient">
 
-		<h1>Background Generator</h1>
+		<h1>I am the god of coding</h1>
 
 		<input class="color1" type="color" name="color1" value="#00ff00">
 		<button id = "random-color1" onclick="generateColor()"> Random </button>
